# kikit-multipanel

./: .gitignore  .gitmodules  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
example/: preset.json
example/demo/: panelize.py  panelize_2.py
example/identical-size-panel/: Makefile  mousebites-preset.json  panel.kicad_pcb  panel.xlsx  panel2.kicad_pcb  panel2.kicad_pro  preset.json  probe-connector-filter.kicad_pcb  probe-connector-lc120.kicad_pcb  probe-connector-mwir.kicad_pcb
example/mixed-sizes/: mousebites-preset.json  preset.json
kikit_multipanel/: __init__.py  cli.py  kikit_multipanel.py
src/kikit_multipanel/: __init__.py  cli.py  kikit_multipanel.py
tests/: __init__.py  test_kikit_multipanel.py
